Advanced Firewall WIP

--- a/MESHdesk/files/MESHdesk/captive_portals/common.conf
+++ b/MESHdesk/files/MESHdesk/captive_portals/common.conf
@@ -14,5 +14,5 @@ mtu 1468
 uamuissl
 sslkeyfile "/etc/MESHdesk/captive_portals/key.pem"
 sslcertfile "/etc/MESHdesk/captive_portals/cert.pem"
-coaport 3799
+#coaport 3799
 
